# se-toolkit-lab-8

./: docker-compose.yml  pyproject.toml
backend/src/lms_backend/routers/: items.py
mcp/mcp-obs/: main.py  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  server.py
nanobot/: Dockerfile  config.json  entrypoint.py
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
