[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for observability tools (VictoriaLogs and VictoriaTraces)"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
